# mychat

./: CMakeLists.txt  README.md  createSql.txt
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemsgmodel.hpp  user.hpp  usermodel.hpp
include/server/mydb/: mydb.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemsgmodel.cpp  usermodel.cpp
src/server/mydb/: mydb.cpp
src/server/redis/: redis.cpp
